# circledb

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
circledb/: __init__.py  circledb.py  logger.py  models.py  updater.py
examples/: .env.sample  update_db.py
examples/webview/: .gitignore  app.py  requirements.txt
examples/webview/static/: script.js  style.css
examples/webview/templates/: index.html
ressources/: big_to_small_fr.sql  delete_all.sql  empty_data.db  test_data.db
tests/: test_circledb.py
